Make sure we've got whitespace all around content

--- a/sass/application.sass
+++ b/sass/application.sass
@@ -90,7 +90,7 @@ h1, h2, h3
   overflow: hidden
   #content
     background: #ffffff
-    margin: 0 ($sidebar_width + $spacing * 3) 0 ($spacing * 1.5)
+    margin: 0 ($sidebar_width + $spacing * 3) ($spacing * 1.5) ($spacing * 1.5)
     min-height: 21em // Keep it roughly higher than the sidebar on the Activity page
     padding: 0
   #sidebar
